--- a/SpeedLayer/KafkaConsumerSubredditDataTopic/pom.xml
+++ b/SpeedLayer/KafkaConsumerSubredditDataTopic/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>KafkaConsumerUsersTopic</artifactId>
+    <artifactId>KafkaConsumerSubredditDataTopic</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
