--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ praw.ini
 Scyper/src/__pycache__/
 Scryper/src/entities/__pycache__/
 Scryper/src/threads/__pycache__/
+SpeedLayer/KafkaSubredditDataConsumer/target/
