--- a/SpeedLayer/KafkaSubredditDataConsumer/pom.xml
+++ b/SpeedLayer/KafkaSubredditDataConsumer/pom.xml
@@ -59,6 +59,11 @@
 			<version>1.7.12</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.12</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>RELEASE</version>
@@ -81,6 +86,18 @@
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<!--<version>7.6.2</version>-->
+		</dependency>
+		<!-- Vader -->
+		<dependency>
+			<groupId>com.github.apanimesh061</groupId>
+			<artifactId>vader-sentiment-analyzer</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<!-- CoreNLP: https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp -->
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>4.2.0</version>
 		</dependency>
 	</dependencies>
 
