--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,26 @@ services:
       ELASTICSEARCH_URL: http://elastic-search:9200
       ELASTICSEARCH_HOSTS: http://elastic-search:9200
 
+  mongo:
+    image: mongo:latest
+    container_name: mongo
+    ports:
+      - 27017:27017
+    networks:
+      - mongo-net
+    restart: unless-stopped
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+    volumes:
+      - mongodb_data_container:/data/db
+
 networks: 
   elastic-stack:
+    driver: bridge
+  mongo-net:
     driver: bridge
 
 volumes:
   elastic-search-vol:
+  mongodb_data_container:
