Almost finished docker compose

--- a/Scryper/Dockerfile
+++ b/Scryper/Dockerfile
@@ -1,19 +1,21 @@
 # Install dependency phase
-FROM python:3.8 AS builder
-COPY requirements.txt .
+#FROM python:3.8 AS builder
+#COPY requirements.txt .
 
 # install dependencies to the local user directory (eg. /root/.local)
-RUN pip install --user -r requirements.txt
+#RUN pip install --user -r requirements.txt
 
 # Run | Production phase
-FROM python:3.8-slim
+FROM python:3.6
 WORKDIR /code
 
 # copy only the dependencies installation from the 1st stage image
-COPY --from=builder /root/.local/bin /root/.local
-COPY ./src .
+# COPY --from=builder /root/.local/bin /root/.local
+COPY . .
+
+RUN pip3 install -r requirements.txt
 
 # update PATH environment variable
-ENV PATH=/root/.local:$PATH
+# ENV KAFKA_CONTAINER=kafka
 
-CMD [ "python", "./main.py" ]
+CMD [ "python3", "./src/main.py" ]
