--- a/Scryper/Dockerfile
+++ b/Scryper/Dockerfile
@@ -18,4 +18,4 @@ RUN pip3 install -r requirements.txt
 # update PATH environment variable
 # ENV KAFKA_CONTAINER=kafka
 
-CMD [ "python3", "./src/main.py" ]
+CMD [ "python3", "-u", "./src/main.py" ]
