--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ Scryper/src/threads/__pycache__/
 SpeedLayer/KafkaSubredditDataConsumer/target/
 BatchLayer/KafkaConsumers/target/
 Scryper/stats.txt
-SpeedLayer/*.csv
-BatchLayer/*.csv
+*.csv
+
